; ModuleID = '/home/carl/AnghaBench/seafile/common/extr_rpc-service.c_seafile_sync.c'
source_filename = "/home/carl/AnghaBench/seafile/common/extr_rpc-service.c_seafile_sync.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@SEAFILE_DOMAIN = common dso_local global i32 0, align 4
@SEAF_ERR_BAD_ARGS = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [27 x i8] c"Repo ID should not be null\00", align 1
@seaf = common dso_local global %struct.TYPE_2__* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @seafile_sync(i8* %0, i8* %1, i32** %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32**, align 8
  store i8* %0, i8** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32** %2, i32*** %7, align 8
  %8 = load i8*, i8** %5, align 8
  %9 = icmp ne i8* %8, null
  br i1 %9, label %15, label %10

10:                                               ; preds = %3
  %11 = load i32**, i32*** %7, align 8
  %12 = load i32, i32* @SEAFILE_DOMAIN, align 4
  %13 = load i32, i32* @SEAF_ERR_BAD_ARGS, align 4
  %14 = call i32 @g_set_error(i32** %11, i32 %12, i32 %13, i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str, i64 0, i64 0))
  store i32 -1, i32* %4, align 4
  br label %22

15:                                               ; preds = %3
  %16 = load %struct.TYPE_2__*, %struct.TYPE_2__** @seaf, align 8
  %17 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = load i8*, i8** %5, align 8
  %20 = load i32**, i32*** %7, align 8
  %21 = call i32 @seaf_sync_manager_add_sync_task(i32 %18, i8* %19, i32** %20)
  store i32 %21, i32* %4, align 4
  br label %22

22:                                               ; preds = %15, %10
  %23 = load i32, i32* %4, align 4
  ret i32 %23
}

declare dso_local i32 @g_set_error(i32**, i32, i32, i8*) #1

declare dso_local i32 @seaf_sync_manager_add_sync_task(i32, i8*, i32**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
